# bubble_blue

./: .dockerignore  .gitignore  EKF_Pose.perspective  blue.repos  ci.repos  docker-compose.yaml  mavros_odom_outputs.perspective  requirements-build.txt  sim.repos
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile  Dockerfile_robot  docker-bake-robot.hcl  docker-bake.hcl
.github/workflows/: ci.yaml  docker.yaml
analysis_tools/: ekf_bag_analysis.py  mavlink_echo.py  post_test_bag_analysis.py
blue_bringup/launch/bluerov2/: bluerov2.launch.yaml
blue_demos/control_integration/launch/: bluerov2_controllers.launch.py
blue_description/config/ardusub/: ardusub_manager.yaml  mavros.yaml
blue_description/description/bluerov2/: config.xacro  gazebo.xacro  sensors.xacro
blue_description/description/dvl/: gazebo.xacro  urdf.xacro
blue_description/description/vn100/: gazebo.xacro  urdf.xacro
blue_description/gazebo/worlds/: underwater.world
blue_localization/blue_localization/: localizer.py
bubble_sensors/: CMakeLists.txt  mavros_plugins.xml  package.xml
bubble_sensors/config/: ekf.yaml  ekf_with_EK3.yaml  gz_bridge_config.yaml  real_ekf.yaml  sensor_config.yaml  sim_ekf.yaml  vectornav.yaml
bubble_sensors/include/bubble_sensors/: mavros_sensor_plugin.hpp
bubble_sensors/launch/: ekf.launch.py  real_ekf.launch.py  real_sensors.launch.yaml  sensors.launch.yaml  sim_ekf.launch.py  sim_sensors.launch.yaml
bubble_sensors/src/: dvl_enabler.py  dvl_message_converter.cpp  generic_sensor.cpp  gravity_compensator.cpp  imu_calibrator.py  imu_configurator.py  initializer.py  mavros_sensor_plugin.cpp  sim_imu_message_converter.cpp  sim_vectornav_manager.py  simulated_dvl.cpp  synchronizer.cpp  vectornav_imu.cpp  vectornav_manager.py  waterlinked_performance_dvl.cpp
bubble_sensors/srv/: ConfigureVN100.srv
